objects/GL_Batch__c/GL_Batch__c.object-meta.xml
<CustomObject>
    <label>GL Batch</label>
    <nameField>
        <displayFormat>B-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GL Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>