objects/GL_Batch__c/fields/Abs_Amount__c.field-meta.xml
<CustomField>
    <fullName>Abs_Amount__c</fullName>
    <label>Abs Amount</label>
    <summarizedField>GL_Entry__c.Abs_Amount__c</summarizedField>
    <summaryForeignKey>GL_Entry__c.GL_Batch__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>