objects/GL_Batch__c/fields/Sync_d__c.field-meta.xml
<CustomField>
    <fullName>Sync_d__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync'd</label>
    <type>Checkbox</type>
</CustomField>