objects/GL_Batch__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>GL_Entry__c.Amount__c</summarizedField>
    <summaryForeignKey>GL_Entry__c.GL_Batch__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>