objects/GL_Batch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Closed__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>No_of_Lines__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Total_Amount__c</columns>
    <columns>Sync_d__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>